[project]
name = "pubmed-papers"
version = "0.1.0"
description = "Fetch PubMed research papers with non-academic authors from pharma/biotech companies."
authors = [
  { name = "Tanujakomperla", email = "tanujakomperla9@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
  "pandas>=2.2.2",
  "typer>=0.12.3",
  "xmltodict>=0.13.0"
]

[project.optional-dependencies]
dev = [
  "black>=24.4.2",
  "mypy>=1.10.0",
  "isort>=5.13.2"
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
